| Summary: | ASTERISK-29407: chan_local: Filtering audio formats should not occur on removed streams | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2021-04-28 07:16:39 | Date Closed: | 2021-04-30 09:02:22 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_local |
| Versions: | 16.17.0 18.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When a stream topology is requested for chan_local it filters the audio streams. This operation is not currently taking into account removed streams, which contain no audio formats. If one is encountered the calling attempt is aborted. It should not behave this way. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-04-30 09:02:23.044-0500 Change 15835 merged by Joshua Colp: chan_local: Skip filtering audio formats on removed streams. [https://gerrit.asterisk.org/c/asterisk/+/15835|https://gerrit.asterisk.org/c/asterisk/+/15835] By: Friendly Automation (friendly-automation) 2021-04-30 09:02:36.944-0500 Change 15808 merged by Joshua Colp: chan_local: Skip filtering audio formats on removed streams. [https://gerrit.asterisk.org/c/asterisk/+/15808|https://gerrit.asterisk.org/c/asterisk/+/15808] By: Friendly Automation (friendly-automation) 2021-04-30 09:02:52.446-0500 Change 15834 merged by Joshua Colp: chan_local: Skip filtering audio formats on removed streams. [https://gerrit.asterisk.org/c/asterisk/+/15834|https://gerrit.asterisk.org/c/asterisk/+/15834] | ||